--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+/inputs
+/outputs
+
+*.ipynb
+
 # Python-generated files
 __pycache__/
 *.py[oc]
@@ -8,3 +13,5 @@ wheels/
 
 # Virtual environments
 .venv
+
+.ruff_cache
